--- a/packages/chat-sdk/examples/react/package.json
+++ b/packages/chat-sdk/examples/react/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@arena-im/chat-sdk": "link:../..",
-    "@arena-im/chat-types": "link:../../../types",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@arena-im/chat-sdk": "file:../..",
+    "@arena-im/chat-types": "file:../../../types",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.0",
@@ -15,9 +15,9 @@
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.9",
     "date-fns": "^2.19.0",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7",
     "typescript": "~4.0.5",
