--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@arena-im/chat-types": "^2.5.14",
-    "firebase": "9.0.2",
+    "firebase": "^9.14.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "socket.io-client": "^4.1.2"
