--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -42,13 +42,22 @@ jobs:
       - name: Install
         run: yarn install
       - name: Build
-        run: yarn ${{ matrix.target }}
+        run: yarn build
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
       - name: Publish
-        run: yarn publish:all:${{ matrix.target }}
+        run: yarn publish:all:build
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - name: Git Pull
+        run: |
+          git pull
+      - name: Build EU
+        run: yarn build:eu
+      - name: Publish EU
+        run: yarn publish:all:build:eu
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
