--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,9 +25,6 @@ jobs:
     name: Publish
     needs: test
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [build, 'build:eu']
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
@@ -42,13 +39,21 @@ jobs:
       - name: Install
         run: yarn install
       - name: Build
-        run: yarn ${{ matrix.target }}
+        run: yarn build
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
       - name: Publish
-        run: yarn publish:all:${{ matrix.target }}
+        run: yarn publish:all:build
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - name: Setup Prd EU
+        run: node update-version.js
+      - name: Build EU
+        run: yarn build:eu
+      - name: Publish Prd EU
+        run: npm publish --tag prd-eu
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
