--- a/packages/liveblog-sdk/package.json
+++ b/packages/liveblog-sdk/package.json
@@ -4,6 +4,7 @@
   "description": "arena-liveblog-sdk is the official JavaScript client for Arena Liveblog, a service for building liveblog applications.",
   "author": "Arena",
   "license": "ISC",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stationfy/arena-sdk.git"
@@ -22,9 +23,9 @@
     "@arena-im/core": "^2.5.19"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.3",
     "@types/sinon": "^10.0.2",
@@ -39,10 +40,10 @@
     "prettier-check": "2.0.0",
     "process": "^0.11.10",
     "rimraf": "3.0.2",
-    "rollup": "2.52.1",
+    "rollup": "3.21.6",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "0.30.0",
+    "rollup-plugin-typescript2": "0.34.1",
     "ts-jest": "^27.0.3",
     "typescript": "4.3.4"
   },
