--- a/package.json
+++ b/package.json
@@ -40,17 +40,21 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
+    "lerna": "4.0.0",
     "lint-staged": "^11.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "^2.3.1",
     "prettier-check": "2.0.0",
     "rimraf": "3.0.2",
     "ts-jest": "^27.0.3",
-    "typescript": "4.3.4",
-    "lerna": "4.0.0"
+    "typescript": "4.3.4"
   },
   "resolutions": {
     "**/agent-base": "5"
   },
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "dependencies": {
+    "@tinacms/cli": "^1.5.14",
+    "tinacms": "^1.5.6"
+  }
 }
