--- a/sdk-doc/package.json
+++ b/sdk-doc/package.json
@@ -21,10 +21,12 @@
     "@mdx-js/react": "^1.6.22",
     "@tinacms/cli": "^1.5.14",
     "clsx": "^1.2.1",
+    "docusaurus-preset-openapi": "^0.6.4",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tinacms": "^1.5.6"
+    "tinacms": "^1.5.6",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1",
