--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.3",
+    "@types/node": "^20.1.2",
     "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
@@ -40,21 +40,18 @@
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
-    "lerna": "4.0.0",
     "lint-staged": "^11.0.0",
+    "npm-registry-fetch": "14.0.5",
     "npm-run-all": "4.1.5",
     "prettier": "^2.3.1",
     "prettier-check": "2.0.0",
     "rimraf": "3.0.2",
     "ts-jest": "^27.0.3",
-    "typescript": "4.3.4"
+    "typescript": "4.3.4",
+    "lerna": "4.0.0"
   },
   "resolutions": {
     "**/agent-base": "5"
   },
-  "version": "0.0.0",
-  "dependencies": {
-    "@tinacms/cli": "^1.5.14",
-    "tinacms": "^1.5.6"
-  }
+  "version": "0.0.0"
 }
