--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "prepare": "husky install"
   },
   "volta": {
-    "node": "10.15.3",
-    "yarn": "1.13.0"
+    "node": "18.17.1",
+    "yarn": "1.22.19"
   },
   "workspaces": [
     "packages/*"
@@ -47,10 +47,11 @@
     "rimraf": "3.0.2",
     "ts-jest": "^27.0.3",
     "typescript": "4.3.4",
-    "lerna": "4.0.0"
+    "lerna": "^6.0.0"
   },
   "resolutions": {
-    "**/agent-base": "5"
+    "**/agent-base": "5",
+    "tslib": "2.4.0"
   },
   "version": "0.0.0"
 }
