--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
   "useWorkspaces": true,
   "command": {
     "publish": {
-      "conventionalCommits": true,
+      "conventionalCommits": false,
       "yes": true
     }
   }
