--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,5 +67,6 @@
     "test": "jest --forceExit",
     "test:jest:watch": "jest --watch",
     "test:watch": "run-s copy-config:dev test:jest:watch"
-  }
+  },
+  "gitHead": "cb29bd7dc2659f90a864f4855cb05355904774f5"
 }
