--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/core",
-  "version": "2.5.31-prd-eu",
+  "version": "2.5.32",
   "description": "Base implementation for all Arena JavaScript SDKs",
   "author": "Arena",
   "license": "ISC",
@@ -18,7 +18,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "2.5.31-prd-eu",
+    "@arena-im/chat-types": "^2.5.32",
     "firebase": "9.0.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
